--- a/sabreamf/trunk/build.xml
+++ b/sabreamf/trunk/build.xml
@@ -55,7 +55,7 @@
             <option name="notes">This is a alpha-prerelease</option>
             <option name="description">SabreAMF is a Flash Remoting server/client. SabreAMF supports both the AMF0 and AMF3 protocols</option>
             <option name="summary">SabreAMF is a Flash Remoting server/client, supporting AMF0 and AMF3 protocols</option>
-            <option name="version" value="0.7.${svn.lastrevision}" />
+            <option name="version" value="1.0-beta.${svn.lastrevision}" />
             <option name="state" value="alpha" />
             <option name="licence" value="BSD" />
             <mapping name="maintainers">
