--- a/build.xml
+++ b/build.xml
@@ -20,8 +20,8 @@
 
     <target name="build" depends="prepare">
          <echo msg="Copying source files" />
-         <mkdir dir="${BUILDDIR}" />
-         <copy todir="${BUILDDIR}">
+         <mkdir dir="${BUILDDIR}/SabreAMF" />
+         <copy todir="${BUILDDIR}/SabreAMF">
             <fileset dir="SabreAMF/">
                 <include name="*.php" />
                 <include name="AMF0/*.php" />
@@ -45,17 +45,18 @@
         <copy todir="${BUILDDIR}" file="README" />
     </target>    
 
-    <target name="package" depends="build, pearpkg">
+    <target name="package" depends="build">
         <echo msg="packaging" />
+        <tar destfile="${BUILDDIR}/sabreamf-r${svn.lastrevision}.tar.gz" compression="gzip" basedir="${BUILDDIR}" />
     </target>
 
-    <target name="pearpkg" depends="prepare, build, buildexamples">
+    <target name="pearpkg">
         <pearpkg name="SabreAMF" dir="${BUILDDIR}" destFile="${BUILDDIR}/package.xml">
             <fileset refid="pkgfiles" />
             <option name="notes">This is a alpha-prerelease</option>
             <option name="description">SabreAMF is a Flash Remoting server/client. SabreAMF supports both the AMF0 and AMF3 protocols</option>
             <option name="summary">SabreAMF is a Flash Remoting server/client, supporting AMF0 and AMF3 protocols</option>
-            <option name="version" value="1.0-beta.${svn.lastrevision}" />
+            <option name="version" value="0.1.${svn.lastrevision}" />
             <option name="state" value="alpha" />
             <option name="licence" value="BSD" />
             <mapping name="maintainers">
@@ -84,7 +85,7 @@
         <phpdoc title="SabreAMF API Documentation" destdir="build/apidocs" sourcepath="SabreAMF/" output="HTML:frames:default" />
     </target>
 
-    <target name="dist" depends="build, buildexamples, textfiles, pearpkg">
+    <target name="dist" depends="build, buildexamples, textfiles, package">
         <echo msg="Creating full featured SabreAMF package" />
     </target>    
 
@@ -93,5 +94,9 @@
         <delete dir="build/" />
         <delete dir="apidocs" />
     </target>    
+
+    <target name="publishsnapshot" depends="clean, dist">
+        <copy file="${BUILDDIR}/sabreamf-r${svn.lastrevision}.tar.gz" todir="/home/www/download.collab.nl/products/sabreamf/snapshots/" /> 
+    </target>
 
 </project>
