--- a/build.xml
+++ b/build.xml
@@ -55,8 +55,8 @@
             <option name="notes">This is a alpha-prerelease</option>
             <option name="description">SabreAMF is a Flash Remoting server/client. SabreAMF supports both the AMF0 and AMF3 protocols</option>
             <option name="summary">SabreAMF is a Flash Remoting server/client, supporting AMF0 and AMF3 protocols</option>
-            <option name="version" value="1.0-beta.${svn.lastrevision}" />
-            <option name="state" value="alpha" />
+            <option name="version" value="1.0.${svn.lastrevision}" />
+            <option name="state" value="beta" />
             <option name="licence" value="BSD" />
             <mapping name="maintainers">
                 <element>
